# Interactive-Snake-Game-

./: README.md  installation.txt  pyproject.toml  requirements.md
assets/: Crazy Frog.mp3:Zone.Identifier  Havana.mp3:Zone.Identifier  In the jungle.mp3:Zone.Identifier  apple.png:Zone.Identifier  apple.wav:Zone.Identifier  apple2.png:Zone.Identifier  body2.png:Zone.Identifier  body3.png:Zone.Identifier  circle-512.jpg:Zone.Identifier  edit_snake.png:Zone.Identifier  gameover.mp3:Zone.Identifier  hakona.mp3:Zone.Identifier  hakona_start.wav:Zone.Identifier  head.png:Zone.Identifier  head2.png:Zone.Identifier  merged.mp3:Zone.Identifier
interactive_snake_game/: color_detection.py  detecting_directions.py  snake_game.py
tests/: test_interactive_snake_game.py  test_snake_game.py
