[tool.poetry]
name = "interactive_snake_game"
version = "0.1.0"
description = ""
authors = ["Dana Al-Abbade <abbadidana91@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.6.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
